--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: soundsliced_dart_extensions
 description: A comprehensive collection of Dart extensions for Flutter including DateTime, Duration, String, List, Color, EdgeInsets, TimeOfDay, and more utilities.
-version: 1.0.1
+version: 2.0.0
 homepage: https://github.com/SoundSliced/soundsliced_dart_extensions
 repository: https://github.com/SoundSliced/soundsliced_dart_extensions
 issue_tracker: https://github.com/SoundSliced/soundsliced_dart_extensions/issues
@@ -12,11 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  fpdart: ^1.2.0
-  intl: ^0.20.2 
-  sizer: ^3.1.3
-  xid: ^1.2.1 
-  collection: ^1.19.1
+  s_packages: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -24,3 +20,4 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
 flutter:
+  uses-material-design: true
